After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727082 - Fix untranslated srings in libcheese
Fix untranslated srings in libcheese
Status: RESOLVED FIXED
Product: cheese
Classification: Applications
Component: general
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: Cheese Maintainer(s)
Cheese Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-26 08:46 UTC by Yosef Or Boczko
Modified: 2014-03-26 08:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix untranslated srings in libcheese (2.25 KB, patch)
2014-03-26 08:46 UTC, Yosef Or Boczko
committed Details | Review

Description Yosef Or Boczko 2014-03-26 08:46:06 UTC
In gnome-control-center the use of cheese_avatar_chooser does not
translated.

I attached a patch to fix this.
Comment 1 Yosef Or Boczko 2014-03-26 08:46:48 UTC
Created attachment 272977 [details] [review]
Fix untranslated srings in libcheese
Comment 2 David King 2014-03-26 08:50:20 UTC
Comment on attachment 272977 [details] [review]
Fix untranslated srings in libcheese

Thanks for the patch, I pushed it to master and gnome-3-12 as 65b73f23ebab36145d6c4aa2eac5796941f3929c and 3a2790e7c33df6a637183361040a0170578efb40.