Fix untranslated strings in libcheese

https://bugzilla.gnome.org/show_bug.cgi?id=727082