libcheese/cheese-camera-device.c
@@ -25,7 +25,7 @@
 #endif
 
 #include <glib.h>
-#include <glib/gi18n.h>
+#include <glib/gi18n-lib.h>
 #include <gio/gio.h>
 
 #include "cheese-camera-device.h"
