libcheese/cheese-camera.c
@@ -27,7 +27,7 @@
 #include <string.h>
 #include <glib-object.h>
 #include <glib.h>
-#include <glib/gi18n.h>
+#include <glib/gi18n-lib.h>
 #include <clutter/clutter.h>
 #include <clutter-gst/clutter-gst.h>
 #include <gst/gst.h>
